Small structural refactor